Correct color of mobile collapse button

--- a/frontend/src/components/sidebar/sidebar.scss
+++ b/frontend/src/components/sidebar/sidebar.scss
@@ -30,7 +30,7 @@
   height: 100%;
 
   .mobile-collapse-button {
-    background-color: var(--md-sys-color-primary-container-lowest);
+    background-color: var(--md-sys-color-primary-container-low);
     border-bottom: 2px solid var(--md-sys-color-primary-container);
 
     cursor: pointer;
